RESOLVED FIXED171461
App crashing: Dispatch queue: com.apple.root.user-interactive-qos / vBoxConvolve / WebCore::FEGaussianBlur::platformApplySoftware()
https://bugs.webkit.org/show_bug.cgi?id=171461
Summary App crashing: Dispatch queue: com.apple.root.user-interactive-qos / vBoxConvo...
Dean Jackson
Reported 2017-04-28 16:11:15 PDT
App crashing: Dispatch queue: com.apple.root.user-interactive-qos / vBoxConvolve / WebCore::FEGaussianBlur::platformApplySoftware()
Attachments
Patch (13.28 KB, patch)
2017-04-28 16:14 PDT, Dean Jackson
eric.carlson: review+
Dean Jackson
Comment 1 2017-04-28 16:14:12 PDT
Dean Jackson
Comment 2 2017-04-28 16:35:10 PDT
Note You need to log in before you can comment on or make changes to this bug.